# typyr

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  log.txt
src/: main.rs  main_1.rs
