[package]
name = "typyr"
version = "0.1.0"
edition = "2024"
default-run = "typyr"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
itertools = "0.14.0"
portable-pty = "0.9.0"
ratatui = { version = "0.29.0", features = ["termwiz"] }
shell-words = "1.1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tui-term = "0.2.0"
vt100 = "0.15.2"
